--- a/site/index.html
+++ b/site/index.html
@@ -1,19 +1,112 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NVCZ7J5SD3"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-NVCZ7J5SD3');
-</script>
+  <!-- =========================
+       GOOGLE ANALYTICS
+  ========================= -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NVCZ7J5SD3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-NVCZ7J5SD3');
+  </script>
+
+  <!-- =========================
+       META DE BASE
+  ========================= -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Master Your Metrics – Diagnostic</title>
 
+  <!-- =========================
+       SEO – TITRE & DESCRIPTION
+  ========================= -->
+  <title>Diagnostic ESG, AML & Conformité pour PME | Master Your Metrics</title>
+
+  <meta name="description" content="Master Your Metrics accompagne les PME, indépendants et experts-comptables via des diagnostics ESG, AML/KYC, cybersécurité et digitalisation. Passez du constat à l’action grâce à des sprints concrets, mesurables et documentés." />
+
+  <meta name="keywords" content="
+  diagnostic ESG PME,
+  audit ESG entreprise,
+  conformité AML KYC Belgique,
+  diagnostic AML PME,
+  cybersécurité PME diagnostic,
+  digitalisation PME audit,
+  plan d’action ESG,
+  sprint ESG,
+  pilotage conformité PME,
+  finance durable PME,
+  CSRD PME,
+  anticipation réglementaire 2026,
+  Master Your Metrics
+  " />
+
+  <meta name="author" content="Master Your Metrics" />
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large" />
+
+  <!-- =========================
+       CANONICAL
+  ========================= -->
+  <link rel="canonical" href="https://masteryourmetrics.be/" />
+
+  <!-- =========================
+       OPEN GRAPH (LinkedIn / Google / IA)
+  ========================= -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Master Your Metrics – Diagnostic ESG & conformité pour PME" />
+  <meta property="og:description" content="Diagnostics ESG, AML/KYC, cybersécurité et digitalisation. Transformez vos contraintes réglementaires en leviers de pilotage." />
+  <meta property="og:url" content="https://masteryourmetrics.be/" />
+  <meta property="og:site_name" content="Master Your Metrics" />
+  <meta property="og:image" content="https://masteryourmetrics.be/assets/og-cover.jpg" />
+
+  <!-- =========================
+       TWITTER / X
+  ========================= -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Diagnostic ESG & conformité PME | Master Your Metrics" />
+  <meta name="twitter:description" content="Passez du diagnostic à l’action grâce à des sprints ESG, AML/KYC et cybersécurité." />
+  <meta name="twitter:image" content="https://masteryourmetrics.be/assets/og-cover.jpg" />
+
+  <!-- =========================
+       SEO POUR IA / CHATGPT / GEMINI
+  ========================= -->
+  <meta name="subject" content="Diagnostic ESG, conformité réglementaire et pilotage PME" />
+  <meta name="classification" content="Finance, ESG, Compliance, Risk Management" />
+  <meta name="audience" content="PME, indépendants, experts-comptables, dirigeants" />
+  <meta name="coverage" content="Belgique, France, Europe" />
+
+  <!-- =========================
+       SCHEMA.ORG STRUCTURED DATA
+  ========================= -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ProfessionalService",
+    "name": "Master Your Metrics",
+    "url": "https://masteryourmetrics.be",
+    "logo": "https://masteryourmetrics.be/assets/logo.png",
+    "description": "Diagnostics ESG, AML/KYC, cybersécurité et digitalisation pour PME. Plans d’actions concrets et sprints opérationnels.",
+    "areaServed": {
+      "@type": "Place",
+      "name": "Belgique, France, Europe"
+    },
+    "serviceType": [
+      "Diagnostic ESG",
+      "Diagnostic AML/KYC",
+      "Audit cybersécurité PME",
+      "Digitalisation des processus",
+      "Pilotage conformité réglementaire"
+    ],
+    "provider": {
+      "@type": "Organization",
+      "name": "Master Your Metrics"
+    }
+  }
+  </script>
+
+ 
   <style>
     :root {
       --bg-main: #f4f6f8;
@@ -273,7 +366,7 @@ header .cta-button {
 
   <script defer src="/_vercel/insights/script.js"></script>
   <script defer src="https://vercel.com/insights/script.js"></script>
-<!-- Google tag (gtag.js) -->
+
 
 </head>
 
