--- a/site/services.html
+++ b/site/services.html
@@ -1,137 +1,164 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NVCZ7J5SD3"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-NVCZ7J5SD3');
-</script>
-<meta charset="UTF-8">
-<title>Nos services – Master Your Metrics</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- =========================
+       GOOGLE ANALYTICS
+  ========================= -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NVCZ7J5SD3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-NVCZ7J5SD3');
+  </script>
 
-<style>
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f6f8;
-  margin: 0;
-  color: #333;
-}
+  <!-- =========================
+       META DE BASE
+  ========================= -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-header {
-  background: linear-gradient(135deg, #001f3f, #003a70);
-  color: white;
-  text-align: center;
-  padding: 80px 20px;
-}
+  <!-- =========================
+       SEO
+  ========================= -->
+  <title>Sprints ESG, AML, Digital & Finance pour PME | Master Your Metrics</title>
+  <meta name="description" content="Découvrez nos sprints ESG, AML/KYC, digitalisation, crédit et cybersécurité. Des accompagnements courts, concrets et orientés résultats pour PME et fiduciaires.">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://masteryourmetrics.be/services.html">
 
-header h1 {
-  font-size: 2.8em;
-  margin-bottom: 15px;
-}
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f6f8;
+      margin: 0;
+      color: #333;
+    }
 
-header p {
-  font-size: 1.25em;
-  max-width: 900px;
-  margin: 0 auto;
-  opacity: 0.95;
-}
+    header {
+      background: linear-gradient(135deg, #001f3f, #003a70);
+      color: white;
+      text-align: center;
+      padding: 80px 20px;
+    }
 
-main {
-  max-width: 1100px;
-  margin: 60px auto;
-  padding: 0 20px;
-}
+    header h1 {
+      font-size: 2.8em;
+      margin-bottom: 15px;
+    }
 
-.section {
-  margin-bottom: 80px;
-}
+    header p {
+      font-size: 1.25em;
+      max-width: 900px;
+      margin: 0 auto;
+      opacity: 0.95;
+    }
 
-.section h2 {
-  font-size: 2.2em;
-  margin-bottom: 20px;
-  color: #001f3f;
-}
+    main {
+      max-width: 1100px;
+      margin: 60px auto;
+      padding: 0 20px;
+    }
 
-.section p {
-  font-size: 1.1em;
-  line-height: 1.7;
-  max-width: 900px;
-}
+    .section {
+      margin-bottom: 80px;
+    }
 
-.cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 30px;
-  margin-top: 40px;
-}
+    .section h2 {
+      font-size: 2.2em;
+      margin-bottom: 20px;
+      color: #001f3f;
+    }
 
-.card {
-  background: white;
-  border-radius: 14px;
-  padding: 35px;
-  box-shadow: 0 8px 24px rgba(0,0,0,0.08);
-}
+    .section p {
+      font-size: 1.1em;
+      line-height: 1.7;
+      max-width: 900px;
+    }
 
-.card h3 {
-  margin-top: 0;
-  color: #003a70;
-}
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 30px;
+      margin-top: 40px;
+    }
 
-.card ul {
-  padding-left: 18px;
-  line-height: 1.6;
-}
+    .card-link {
+      text-decoration: none;
+      color: inherit;
+      display: block;
+    }
 
-.price {
-  margin-top: 20px;
-  font-weight: bold;
-  font-size: 1.1em;
-  color: #0074D9;
-}
+    .card {
+      background: white;
+      border-radius: 14px;
+      padding: 35px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.08);
+      transition: all 0.25s ease;
+      height: 100%;
+    }
 
-.full-width-cta {
-  width: 100vw;
-  margin-left: calc(-50vw + 50%);
-  background: linear-gradient(135deg, #0074D9, #005fa3);
-  color: white;
-  padding: 90px 20px;
-  text-align: center;
-}
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 14px 32px rgba(0,0,0,0.12);
+    }
 
-.full-width-cta h2 {
-  font-size: 2.6em;
-  margin-bottom: 20px;
-}
+    .card h3 {
+      margin-top: 0;
+      color: #003a70;
+    }
 
-.full-width-cta p {
-  font-size: 1.25em;
-  max-width: 900px;
-  margin: 0 auto 40px auto;
-}
+    .card ul {
+      padding-left: 18px;
+      line-height: 1.6;
+    }
 
-.cta-btn {
-  display: inline-block;
-  background: #28a745;
-  color: white;
-  padding: 20px 42px;
-  font-size: 1.3em;
-  border-radius: 10px;
-  text-decoration: none;
-  font-weight: bold;
-}
+    .price {
+      margin-top: 20px;
+      font-weight: bold;
+      font-size: 1.1em;
+      color: #0074D9;
+    }
 
-footer {
-  text-align: center;
-  padding: 40px 20px;
-  font-size: 0.9em;
-  color: #666;
-}
-</style>
+    .full-width-cta {
+      width: 100vw;
+      margin-left: calc(-50vw + 50%);
+      background: linear-gradient(135deg, #0074D9, #005fa3);
+      color: white;
+      padding: 90px 20px;
+      text-align: center;
+    }
+
+    .full-width-cta h2 {
+      font-size: 2.6em;
+      margin-bottom: 20px;
+    }
+
+    .full-width-cta p {
+      font-size: 1.25em;
+      max-width: 900px;
+      margin: 0 auto 40px auto;
+    }
+
+    .cta-btn {
+      display: inline-block;
+      background: #28a745;
+      color: white;
+      padding: 20px 42px;
+      font-size: 1.3em;
+      border-radius: 10px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    footer {
+      text-align: center;
+      padding: 40px 20px;
+      font-size: 0.9em;
+      color: #666;
+    }
+  </style>
+
 </head>
 
 <body>
@@ -139,122 +166,140 @@ footer {
 <header>
   <h1>Des diagnostics à l’action concrète</h1>
   <p>
-    Master Your Metrics accompagne les indépendants, PME et experts du chiffre
-    dans la structuration, la conformité et la performance de leur activité.
+    Nos sprints transforment vos constats en décisions,
+    puis en actions mesurables.
     <br><br>
-    Pas de rapports inutiles. Pas de jargon.
-    <strong>Des décisions claires, des actions mesurables.</strong>
+    <strong>Courts, ciblés, documentés. Pensés pour les PME et fiduciaires.</strong>
   </p>
 </header>
 
 <main>
 
+<!-- =========================
+     MÉTHODE
+========================= -->
 <section class="section">
-  <h2>Notre approche</h2>
+  <h2>Notre méthode d’intervention</h2>
   <p>
-    Nous travaillons toujours en trois étapes simples et efficaces.
-    Cette méthode permet de passer rapidement d’un diagnostic théorique
-    à des résultats concrets, sans immobiliser inutilement vos équipes.
+    Chaque accompagnement suit une logique simple :
+    comprendre, prioriser, agir.
+    Aucun sprint n’est lancé sans diagnostic préalable.
   </p>
 
   <div class="cards">
     <div class="card">
       <h3>1️⃣ État des lieux</h3>
       <ul>
-        <li>Diagnostic structuré (ESG, AML, Digital, Crédit, Cyber)</li>
+        <li>Diagnostic structuré par domaine</li>
         <li>Score clair sur 100</li>
-        <li>Identification des risques prioritaires</li>
+        <li>Identification des écarts critiques</li>
       </ul>
-      <div class="price">Inclus via le diagnostic en ligne</div>
+      <div class="price">Diagnostic en ligne gratuit</div>
     </div>
 
     <div class="card">
       <h3>2️⃣ Sprint opérationnel</h3>
       <ul>
-        <li>Objectif précis et borné</li>
-        <li>Livrables concrets</li>
+        <li>Objectif clair et borné</li>
+        <li>Livrables exploitables</li>
         <li>Délais courts (2 à 4 semaines)</li>
       </ul>
       <div class="price">À partir de 1.250 € HT</div>
     </div>
 
     <div class="card">
-      <h3>3️⃣ Suivi & accompagnement</h3>
+      <h3>3️⃣ Suivi & pilotage</h3>
       <ul>
-        <li>Mise en œuvre progressive</li>
-        <li>Priorisation des actions</li>
-        <li>Support stratégique</li>
+        <li>Structuration dans le temps</li>
+        <li>Priorisation des prochaines actions</li>
+        <li>Crédibilité renforcée</li>
       </ul>
       <div class="price">Sur devis</div>
     </div>
   </div>
 </section>
 
+<!-- =========================
+     SPRINTS
+========================= -->
 <section class="section">
   <h2>Nos sprints par domaine</h2>
 
   <div class="cards">
 
-    <div class="card">
-      <h3>🌱 ESG & durabilité</h3>
-      <ul>
-        <li>Structuration ESG pragmatique</li>
-        <li>Réponses aux demandes clients / banques</li>
-        <li>Préparation CSRD / exigences 2026</li>
-      </ul>
-      <div class="price">Sprint ESG – dès 1.500 € HT</div>
-    </div>
+    <a href="sprint-esg.html" class="card-link">
+      <div class="card">
+        <h3>🌱 Sprint ESG</h3>
+        <ul>
+          <li>Structuration ESG pragmatique</li>
+          <li>Réponses aux demandes clients et banques</li>
+          <li>Préparation exigences 2026 / CSRD</li>
+        </ul>
+        <div class="price">Dès 1.500 € HT</div>
+      </div>
+    </a>
 
-    <div class="card">
-      <h3>💼 AML / KYC</h3>
-      <ul>
-        <li>Revue du dispositif existant</li>
-        <li>Procédures et scoring adaptés</li>
-        <li>Préparation contrôles et audits</li>
-      </ul>
-      <div class="price">Sprint AML – dès 1.250 € HT</div>
-    </div>
+    <a href="sprint-aml-kyc.html" class="card-link">
+      <div class="card">
+        <h3>💼 Sprint AML / KYC</h3>
+        <ul>
+          <li>Revue du dispositif existant</li>
+          <li>Procédures et scoring adaptés</li>
+          <li>Préparation audits et contrôles</li>
+        </ul>
+        <div class="price">Dès 1.250 € HT</div>
+      </div>
+    </a>
 
-    <div class="card">
-      <h3>💻 Digital & automatisation</h3>
-      <ul>
-        <li>Optimisation outils & process</li>
-        <li>Automatisation tâches clés</li>
-        <li>Amélioration parcours client</li>
-      </ul>
-      <div class="price">Sprint Digital – dès 1.250 € HT</div>
-    </div>
+    <a href="sprint-digitalisation.html" class="card-link">
+      <div class="card">
+        <h3>💻 Sprint Digitalisation</h3>
+        <ul>
+          <li>Analyse de la maturité digitale</li>
+          <li>Optimisation des outils internes</li>
+          <li>Automatisations ciblées et utiles</li>
+        </ul>
+        <div class="price">Dès 1.250 € HT</div>
+      </div>
+    </a>
 
-    <div class="card">
-      <h3>📊 Crédit & solidité financière</h3>
-      <ul>
-        <li>Lecture financière claire</li>
-        <li>Préparation dossiers bancaires</li>
-        <li>Amélioration profil de financement</li>
-      </ul>
-      <div class="price">Sprint Crédit – dès 1.250 € HT</div>
-    </div>
+    <a href="sprint-credit-ratios-financiers.html" class="card-link">
+      <div class="card">
+        <h3>📊 Sprint Crédit & ratios</h3>
+        <ul>
+          <li>Lecture financière claire</li>
+          <li>Préparation dossiers bancaires</li>
+          <li>Amélioration du profil de financement</li>
+        </ul>
+        <div class="price">Dès 1.250 € HT</div>
+      </div>
+    </a>
 
-    <div class="card">
-      <h3>🔐 Cybersécurité</h3>
-      <ul>
-        <li>Réduction du risque humain</li>
-        <li>Plan de réponse aux incidents</li>
-        <li>Bonnes pratiques concrètes</li>
-      </ul>
-      <div class="price">Sprint Cyber – dès 1.250 € HT</div>
-    </div>
+    <a href="sprint-cybersecurite.html" class="card-link">
+      <div class="card">
+        <h3>🔐 Sprint Cybersécurité</h3>
+        <ul>
+          <li>Réduction du risque humain</li>
+          <li>Bonnes pratiques concrètes</li>
+          <li>Plan de réponse aux incidents</li>
+        </ul>
+        <div class="price">Dès 1.250 € HT</div>
+      </div>
+    </a>
 
   </div>
 </section>
 
 </main>
 
+<!-- =========================
+     CTA FINAL
+========================= -->
 <section class="full-width-cta">
   <h2>Passez du diagnostic à l’action</h2>
   <p>
     En 30 minutes gratuites, nous analysons vos résultats,
-    priorisons les risques et définissons le sprint le plus utile
+    identifions vos priorités et définissons le sprint le plus utile
     pour votre situation.
   </p>
   <a href="https://calendar.app.google/4E79ZUbDgHx2AMGe6"
