--- a/site/index.html
+++ b/site/index.html
@@ -398,7 +398,8 @@ header .cta-button {
     <div style="background:white;padding:30px;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,0.08);">
       <h3>🎓 Certifications internationales</h3>
       <p>
-        Expertise inspirée des standards <strong>CESGA (ESG & finance durable)</strong>
+        Expertise inspirée des standards <strong>CESGA (ESG & finance durable)</strong>,<strong>ORM (Operational risk managment)</strong>
+        <strong>PECB (Compliance Expert)</strong>, <strong>FSMA</strong>
         et <strong>ACAMS (AML / KYC)</strong>.
       </p>
     </div>
