--- a/site/index.html
+++ b/site/index.html
@@ -50,7 +50,10 @@
        CANONICAL
   ========================= -->
   <link rel="canonical" href="https://masteryourmetrics.be/" />
-
+<!-- FAVICON -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="apple-touch-icon" href="/favicon.png">
   <!-- =========================
        OPEN GRAPH (LinkedIn / Google / IA)
   ========================= -->
