--- a/site/sprint-esg.html
+++ b/site/sprint-esg.html
@@ -7,7 +7,7 @@
 
   <title>Sprint ESG pour PME – Diagnostic et plan d’action concret | Master Your Metrics</title>
 
-  <meta name="description" content="Sprint ESG pour PME et indépendants. Passez d’un diagnostic ESG clair à un plan d’actions concret, documenté et valorisable auprès des banques et partenaires en 30 à 90 jours." />
+  <meta name="description" content="Sprint ESG pour PME et indépendants. Passez d’un diagnostic ESG clair à un plan d’actions concret, documenté et valorisable auprès des banques et partenaires." />
 
   <link rel="canonical" href="https://masteryourmetrics.be/sprint-esg.html" />
 
@@ -138,7 +138,7 @@
 <body>
 
 <header>
-  <h1>Sprint ESG pour PME<br>De l’évaluation à l’action en 30 à 90 jours</h1>
+  <h1>Sprint ESG pour PME<br>De l’évaluation à l’action</h1>
   <p>
     Un sprint ESG n’est pas un rapport théorique.<br>
     C’est un accompagnement structuré pour transformer vos obligations ESG
