--- a/site/sprint-esg.html
+++ b/site/sprint-esg.html
@@ -138,7 +138,7 @@
 <body>
 
 <header>
-  <h1>Sprint ESG pour PME<br>De l’évaluation à l’action</h1>
+  <h1>Sprint ESG pour PME<br>De l’évaluation à l’action.</h1>
   <p>
     Un sprint ESG n’est pas un rapport théorique.<br>
     C’est un accompagnement structuré pour transformer vos obligations ESG
