--- a/site/index.html
+++ b/site/index.html
@@ -516,7 +516,7 @@ header .cta-button {
     <a href="diagnostics/aml.html" class="feature">🔒 <strong>AML/KYC</strong><br>Renforcez votre conformité</a>
     <a href="diagnostics/digital.html" class="feature">💻 <strong>Digitalisation</strong><br>Identifiez vos leviers</a>
     <a href="diagnostics/credit.html" class="feature">📊 <strong>Crédit</strong><br>Optimisez vos ratios</a>
-    <a href="diagnostics/cyber.html" class="feature">🛡️ <strong>Cybersécurité</strong><br>Mesurez vos protections</a>
+    <a href="diagnostics/cybersecurite.html" class="feature">🛡️ <strong>Cybersécurité</strong><br>Mesurez vos protections</a>
   </div>
 </section>
 <!-- =======================
