--- a/site/index.html
+++ b/site/index.html
@@ -22,9 +22,9 @@
   <!-- =========================
        SEO – TITRE & DESCRIPTION
   ========================= -->
-  <title>Diagnostic ESG, AML & Conformité pour PME | Master Your Metrics</title>
+  <title>Consultant ESG, AML/KYC & Conformité en Belgique | Master Your Metrics</title>
 
-  <meta name="description" content="Master Your Metrics accompagne les PME, indépendants et experts-comptables via des diagnostics ESG, AML/KYC, cybersécurité et digitalisation. Passez du constat à l’action grâce à des sprints concrets, mesurables et documentés." />
+  <meta name="description" content="Master Your Metrics est un cabinet de conseil en Belgique pour PME, indépendants et professionnels du chiffre : diagnostics ESG, AML/KYC, cybersécurité et digitalisation. Passez du constat à l’action grâce à des sprints concrets, mesurables et documentés." />
 
   <meta name="keywords" content="
   diagnostic ESG PME,
@@ -58,8 +58,8 @@
        OPEN GRAPH (LinkedIn / Google / IA)
   ========================= -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Master Your Metrics – Diagnostic ESG & conformité pour PME" />
-  <meta property="og:description" content="Diagnostics ESG, AML/KYC, cybersécurité et digitalisation. Transformez vos contraintes réglementaires en leviers de pilotage." />
+  <meta property="og:title" content="Master Your Metrics – Consultant ESG & conformité pour PME (Belgique)" />
+  <meta property="og:description" content="Diagnostics ESG, AML/KYC, cybersécurité et digitalisation. Transformez vos contraintes réglementaires en leviers de pilotage, avec une approche décisionnelle et opérationnelle." />
   <meta property="og:url" content="https://masteryourmetrics.be/" />
   <meta property="og:site_name" content="Master Your Metrics" />
   <meta property="og:image" content="https://masteryourmetrics.be/assets/og-cover.jpg" />
@@ -68,8 +68,8 @@
        TWITTER / X
   ========================= -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Diagnostic ESG & conformité PME | Master Your Metrics" />
-  <meta name="twitter:description" content="Passez du diagnostic à l’action grâce à des sprints ESG, AML/KYC et cybersécurité." />
+  <meta name="twitter:title" content="Consultant ESG & conformité PME (Belgique) | Master Your Metrics" />
+  <meta name="twitter:description" content="Passez du diagnostic à l’action grâce à des sprints ESG, AML/KYC, cybersécurité et digitalisation." />
   <meta name="twitter:image" content="https://masteryourmetrics.be/assets/og-cover.jpg" />
 
   <!-- =========================
@@ -90,12 +90,14 @@
     "name": "Master Your Metrics",
     "url": "https://masteryourmetrics.be",
     "logo": "https://masteryourmetrics.be/assets/logo.png",
-    "description": "Diagnostics ESG, AML/KYC, cybersécurité et digitalisation pour PME. Plans d’actions concrets et sprints opérationnels.",
+    "description": "Cabinet de conseil en Belgique : diagnostics ESG, AML/KYC, cybersécurité et digitalisation pour PME. Plans d’actions concrets et sprints opérationnels.",
     "areaServed": {
       "@type": "Place",
       "name": "Belgique, France, Europe"
     },
     "serviceType": [
+      "Conseil ESG",
+      "Conseil AML/KYC",
       "Diagnostic ESG",
       "Diagnostic AML/KYC",
       "Audit cybersécurité PME",
@@ -378,7 +380,7 @@ header .cta-button {
 <header>
   <h1>Transformez vos contraintes en opportunités.</h1>
   <p style="font-size:1.2em;max-width:800px;margin:auto;">
-    Nos diagnostics ESG, AML/KYC, digitalisation et cybersécurité vous aident à mieux piloter votre activité,
+    Cabinet de conseil en Belgique : nos diagnostics ESG, AML/KYC, digitalisation et cybersécurité vous aident à mieux piloter votre activité,
     à répondre aux attentes des clients et à anticiper les évolutions réglementaires.
   </p>
   <a href="diagnostics/esg.html" class="cta-button">🚀 Commencer l'auto-évaluation</a>
@@ -394,16 +396,16 @@ header .cta-button {
   <p style="max-width:850px;margin:0 auto 50px;text-align:center;font-size:1.05em;">
     Master Your Metrics s’appuie sur une expertise solide en
     <strong>finance, conformité réglementaire et pilotage des risques</strong>,
-    au service des indépendants, PME et professionnels du chiffre.
+    au service des indépendants, PME et professionnels du chiffre en Belgique.
   </p>
 
   <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:30px;max-width:1100px;margin:auto;">
     <div style="background:white;padding:30px;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,0.08);">
       <h3>🎓 Certifications internationales</h3>
       <p>
-        Expertise inspirée des standards <strong>CESGA (ESG & finance durable)</strong>,<strong>ORM (Operational risk managment)</strong>
-        <strong>PECB (Compliance Expert)</strong>, <strong>FSMA</strong>
-        et <strong>ACAMS (AML / KYC)</strong>.
+        Expertise inspirée des standards <strong>CESGA (ESG & finance durable)</strong>, <strong>ORM (Operational Risk Management)</strong>,
+        <strong>PECB</strong>, <strong>Compliance Expert – FSMA</strong>,
+        <strong>ACAMS (AML / KYC)</strong> et <strong>Analyse patrimoniale</strong>.
       </p>
     </div>
 
@@ -411,7 +413,7 @@ header .cta-button {
       <h3>🏦 Expérience bancaire & réglementaire</h3>
       <p>
         Compréhension concrète des attentes des banques,
-        partenaires financiers et autorités.
+        partenaires financiers et autorités en Belgique.
       </p>
     </div>
 
@@ -419,7 +421,7 @@ header .cta-button {
       <h3>📊 Approche orientée pilotage</h3>
       <p>
         Pas de jargon inutile : des diagnostics conçus pour
-        <strong>décider, prioriser et agir</strong>.
+        <strong>décider, prioriser et agir</strong>, avec une lecture claire par un consultant ou une consultante.
       </p>
     </div>
   </div>
@@ -512,11 +514,11 @@ header .cta-button {
 <section id="modules">
   <h2>Nos 5 Modules Clés</h2>
   <div class="features">
-    <a href="diagnostics/esg.html" class="feature">🌱 <strong>ESG</strong><br>Évaluez vos engagements durables</a>
-    <a href="diagnostics/aml.html" class="feature">🔒 <strong>AML/KYC</strong><br>Renforcez votre conformité</a>
-    <a href="diagnostics/digital.html" class="feature">💻 <strong>Digitalisation</strong><br>Identifiez vos leviers</a>
-    <a href="diagnostics/credit.html" class="feature">📊 <strong>Crédit</strong><br>Optimisez vos ratios</a>
-    <a href="diagnostics/cybersecurite.html" class="feature">🛡️ <strong>Cybersécurité</strong><br>Mesurez vos protections</a>
+    <a href="diagnostics/esg.html" class="feature">🌱 <strong>ESG</strong><br>Diagnostic ESG en Belgique : évaluez vos engagements durables</a>
+    <a href="diagnostics/aml.html" class="feature">🔒 <strong>AML/KYC</strong><br>Diagnostic AML/KYC : renforcez votre conformité</a>
+    <a href="diagnostics/digital.html" class="feature">💻 <strong>Digitalisation</strong><br>Diagnostic digital : identifiez vos leviers</a>
+    <a href="diagnostics/credit.html" class="feature">📊 <strong>Crédit</strong><br>Diagnostic crédit : optimisez vos ratios</a>
+    <a href="diagnostics/cybersecurite.html" class="feature">🛡️ <strong>Cybersécurité</strong><br>Diagnostic cybersécurité : mesurez vos protections</a>
   </div>
 </section>
 <!-- =======================
