--- a/site/index.html
+++ b/site/index.html
@@ -22,9 +22,9 @@
   <!-- =========================
        SEO – TITRE & DESCRIPTION
   ========================= -->
-  <title>Consultant ESG, AML/KYC & Conformité en Belgique | Master Your Metrics</title>
+  <title>Consultant en Belgique – Diagnostics ESG, AML/KYC & Conformité | Master Your Metrics</title>
 
-  <meta name="description" content="Master Your Metrics est un cabinet de conseil en Belgique pour PME, indépendants et professionnels du chiffre : diagnostics ESG, AML/KYC, cybersécurité et digitalisation. Passez du constat à l’action grâce à des sprints concrets, mesurables et documentés." />
+  <meta name="description" content="Master Your Metrics est un cabinet de conseil en Belgique pour PME, indépendants et professionnels du chiffre : diagnostics ESG, AML/KYC, cybersécurité et digitalisation. Passez du constat au plan d’action via des sprints concrets, mesurables et documentés." />
 
   <meta name="keywords" content="
   diagnostic ESG PME,
@@ -50,16 +50,17 @@
        CANONICAL
   ========================= -->
   <link rel="canonical" href="https://masteryourmetrics.be/" />
-<!-- FAVICON -->
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
-<link rel="icon" href="/favicon.png" type="image/png">
-<link rel="apple-touch-icon" href="/favicon.png">
+  <!-- FAVICON -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.png" type="image/png">
+  <link rel="apple-touch-icon" href="/favicon.png">
+
   <!-- =========================
        OPEN GRAPH (LinkedIn / Google / IA)
   ========================= -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Master Your Metrics – Consultant ESG & conformité pour PME (Belgique)" />
-  <meta property="og:description" content="Diagnostics ESG, AML/KYC, cybersécurité et digitalisation. Transformez vos contraintes réglementaires en leviers de pilotage, avec une approche décisionnelle et opérationnelle." />
+  <meta property="og:title" content="Master Your Metrics – Consultant & diagnostics ESG/AML pour PME (Belgique)" />
+  <meta property="og:description" content="Diagnostics ESG, AML/KYC, cybersécurité et digitalisation. Lecture stratégique et sprints opérationnels avec livrables concrets (plans, policies, preuves)." />
   <meta property="og:url" content="https://masteryourmetrics.be/" />
   <meta property="og:site_name" content="Master Your Metrics" />
   <meta property="og:image" content="https://masteryourmetrics.be/assets/og-cover.jpg" />
@@ -68,7 +69,7 @@
        TWITTER / X
   ========================= -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Consultant ESG & conformité PME (Belgique) | Master Your Metrics" />
+  <meta name="twitter:title" content="Consultant (Belgique) – Diagnostics ESG & conformité PME | Master Your Metrics" />
   <meta name="twitter:description" content="Passez du diagnostic à l’action grâce à des sprints ESG, AML/KYC, cybersécurité et digitalisation." />
   <meta name="twitter:image" content="https://masteryourmetrics.be/assets/og-cover.jpg" />
 
@@ -111,7 +112,6 @@
   }
   </script>
 
- 
   <style>
     :root {
       --bg-main: #f4f6f8;
@@ -167,10 +167,10 @@
     }
 
     .features {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr); /* 5 modules sur une ligne */
-  gap: 1.5rem;
-}
+      display: grid;
+      grid-template-columns: repeat(5, 1fr); /* 5 modules sur une ligne */
+      gap: 1.5rem;
+    }
 
     .feature {
       background: white;
@@ -192,43 +192,45 @@
       border-left: 5px solid var(--primary);
       box-shadow: 0 8px 20px rgba(0,0,0,0.08);
     }
-.about-container {
-  display: flex;
-  gap: 30px;
-  align-items: center;
-}
 
-/* Image */
-.about-container img {
-  max-width: 300px;
-  border-radius: 14px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.12);
-  flex-shrink: 0; /* empêche l'image de se réduire */
-}
+    .about-container {
+      display: flex;
+      gap: 30px;
+      align-items: center;
+    }
 
-/* Texte */
-.about-container > div {
-  max-width: 700px;
-}
+    /* Image */
+    .about-container img {
+      max-width: 300px;
+      border-radius: 14px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.12);
+      flex-shrink: 0; /* empêche l'image de se réduire */
+    }
 
-/* Mobile : image au-dessus du texte */
-@media (max-width: 768px) {
-  .about-container {
-    flex-direction: column;
-    text-align: center;
-  }
-}
-@media (max-width: 1100px) {
-  .features {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
+    /* Texte */
+    .about-container > div {
+      max-width: 700px;
+    }
 
-@media (max-width: 600px) {
-  .features {
-    grid-template-columns: 1fr;
-  }
-}
+    /* Mobile : image au-dessus du texte */
+    @media (max-width: 768px) {
+      .about-container {
+        flex-direction: column;
+        text-align: center;
+      }
+    }
+    @media (max-width: 1100px) {
+      .features {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+
+    @media (max-width: 600px) {
+      .features {
+        grid-template-columns: 1fr;
+      }
+    }
+
     #scrollCTA {
       position: fixed;
       bottom: 28px;
@@ -281,97 +283,98 @@
       cursor: pointer;
       font-size: 18px;
     }
+
     #temoignages {
-  text-align: center;
-}
+      text-align: center;
+    }
 
-.testimonial-carousel {
-  max-width: 700px;
-  margin: 40px auto 0 auto;
-  position: relative;
-}
+    .testimonial-carousel {
+      max-width: 700px;
+      margin: 40px auto 0 auto;
+      position: relative;
+    }
 
-.testimonial-slide {
-  display: none;
-  background: white;
-  padding: 30px;
-  border-radius: 16px;
-  box-shadow: 0 12px 30px rgba(0,0,0,0.08);
-  transition: opacity 0.6s ease;
-}
+    .testimonial-slide {
+      display: none;
+      background: white;
+      padding: 30px;
+      border-radius: 16px;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.08);
+      transition: opacity 0.6s ease;
+    }
 
-.testimonial-slide.active {
-  display: block;
-}
+    .testimonial-slide.active {
+      display: block;
+    }
 
-.testimonial-slide img {
-  width: 70px;
-  height: 70px;
-  object-fit: cover;
-  border-radius: 50%;
-  margin-bottom: 15px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-}
+    .testimonial-slide img {
+      width: 70px;
+      height: 70px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-bottom: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    }
 
-.testimonial-slide blockquote {
-  font-style: italic;
-  color: #444;
-  margin: 15px 0 20px 0;
-  line-height: 1.5;
-}
+    .testimonial-slide blockquote {
+      font-style: italic;
+      color: #444;
+      margin: 15px 0 20px 0;
+      line-height: 1.5;
+    }
 
-.testimonial-slide strong {
-  display: block;
-  font-weight: 600;
-  color: #0b1c2d;
-}
+    .testimonial-slide strong {
+      display: block;
+      font-weight: 600;
+      color: #0b1c2d;
+    }
 
-.testimonial-slide span {
-  font-size: 0.9em;
-  color: #666;
-}
-/* ======================================
-   HERO HEADER – IMAGE IA (SURCHARGE)
-====================================== */
-header {
-  position: relative;
-  background-image:
-    linear-gradient(
-      rgba(5, 20, 45, 0.78),
-      rgba(5, 20, 45, 0.88)
-    ),
-    url("bande.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
+    .testimonial-slide span {
+      font-size: 0.9em;
+      color: #666;
+    }
 
-/* Effet halo IA / intelligence */
-header::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background:
-    radial-gradient(
-      circle at 65% 40%,
-      rgba(0, 200, 255, 0.18),
-      transparent 60%
-    );
-  pointer-events: none;
-}
+    /* ======================================
+       HERO HEADER – IMAGE IA (SURCHARGE)
+    ====================================== */
+    header {
+      position: relative;
+      background-image:
+        linear-gradient(
+          rgba(5, 20, 45, 0.78),
+          rgba(5, 20, 45, 0.88)
+        ),
+        url("bande.jpg");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
 
-/* Assure que le contenu reste au-dessus */
-header h1,
-header p,
-header .cta-button {
-  position: relative;
-  z-index: 1;
-}
+    /* Effet halo IA / intelligence */
+    header::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background:
+        radial-gradient(
+          circle at 65% 40%,
+          rgba(0, 200, 255, 0.18),
+          transparent 60%
+        );
+      pointer-events: none;
+    }
+
+    /* Assure que le contenu reste au-dessus */
+    header h1,
+    header p,
+    header .cta-button {
+      position: relative;
+      z-index: 1;
+    }
   </style>
 
   <script defer src="/_vercel/insights/script.js"></script>
   <script defer src="https://vercel.com/insights/script.js"></script>
-
 
 </head>
 
@@ -380,8 +383,8 @@ header .cta-button {
 <header>
   <h1>Transformez vos contraintes en opportunités.</h1>
   <p style="font-size:1.2em;max-width:800px;margin:auto;">
-    Cabinet de conseil en Belgique : nos diagnostics ESG, AML/KYC, digitalisation et cybersécurité vous aident à mieux piloter votre activité,
-    à répondre aux attentes des clients et à anticiper les évolutions réglementaires.
+    Cabinet de conseil en Belgique : diagnostics ESG, AML/KYC, digitalisation et cybersécurité pour PME, indépendants et professionnels du chiffre.
+    Pilotez, priorisez et sécurisez vos décisions avec une approche opérationnelle et documentée.
   </p>
   <a href="diagnostics/esg.html" class="cta-button">🚀 Commencer l'auto-évaluation</a>
 </header>
