--- a/site/services.html
+++ b/site/services.html
@@ -20,13 +20,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- =========================
-       SEO
+       SEO STRATÉGIQUE
   ========================= -->
-  <title>Sprints ESG, AML, Digital & Finance pour PME | Master Your Metrics</title>
-  <meta name="description" content="Découvrez nos sprints ESG, AML/KYC, digitalisation, crédit et cybersécurité. Des accompagnements courts, concrets et orientés résultats pour PME et fiduciaires.">
+  <title>Sprints opérationnels ESG, AML/KYC & Digital pour PME et fiduciaires | Master Your Metrics</title>
+  <meta name="description" content="Sprints courts et opérationnels en ESG, AML/KYC, digitalisation, finance et cybersécurité. Des livrables concrets, des prix clairs et des résultats mesurables pour PME et fiduciaires.">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://masteryourmetrics.be/services.html">
+  <link rel="canonical" href="https://www.masteryourmetrics.be/services.html">
 
+  <!-- =========================
+       STYLE
+  ========================= -->
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -39,29 +42,29 @@
       background: linear-gradient(135deg, #001f3f, #003a70);
       color: white;
       text-align: center;
-      padding: 80px 20px;
+      padding: 90px 20px;
     }
 
     header h1 {
-      font-size: 2.8em;
+      font-size: 2.7em;
       margin-bottom: 15px;
     }
 
     header p {
       font-size: 1.25em;
-      max-width: 900px;
+      max-width: 950px;
       margin: 0 auto;
       opacity: 0.95;
     }
 
     main {
       max-width: 1100px;
-      margin: 60px auto;
+      margin: 70px auto;
       padding: 0 20px;
     }
 
     .section {
-      margin-bottom: 80px;
+      margin-bottom: 90px;
     }
 
     .section h2 {
@@ -120,6 +123,13 @@
       color: #0074D9;
     }
 
+    .price small {
+      display: block;
+      font-weight: normal;
+      color: #555;
+      margin-top: 6px;
+    }
+
     .full-width-cta {
       width: 100vw;
       margin-left: calc(-50vw + 50%);
@@ -164,16 +174,36 @@
 <body>
 
 <header>
-  <h1>Des diagnostics à l’action concrète</h1>
+  <h1>Sprints opérationnels ESG, AML/KYC & Digital pour PME et fiduciaires</h1>
   <p>
-    Nos sprints transforment vos constats en décisions,
-    puis en actions mesurables.
+    De l’analyse à l’exécution, nous transformons vos constats réglementaires
+    en <strong>actions concrètes, documentées et mesurables</strong>.
     <br><br>
-    <strong>Courts, ciblés, documentés. Pensés pour les PME et fiduciaires.</strong>
+    Pensé pour les <strong>dirigeants de PME, associés de fiduciaires</strong>
+    et structures sans équipe conformité dédiée.
   </p>
 </header>
 
 <main>
+
+<!-- =========================
+     POSITIONNEMENT
+========================= -->
+<section class="section">
+  <h2>Pourquoi nos sprints font la différence</h2>
+  <p>
+    La conformité n’est plus une option, mais elle ne doit pas devenir un frein.
+    Nos sprints sont conçus pour produire des résultats rapides,
+    exploitables et crédibles auprès des banques, clients et régulateurs.
+  </p>
+
+  <ul>
+    <li>Moins de stress lors des contrôles et audits</li>
+    <li>Dossiers prêts à être démontrés à tout moment</li>
+    <li>Temps opérationnel réduit sur la conformité</li>
+    <li>Vision claire des priorités réelles</li>
+  </ul>
+</section>
 
 <!-- =========================
      MÉTHODE
@@ -181,40 +211,49 @@
 <section class="section">
   <h2>Notre méthode d’intervention</h2>
   <p>
-    Chaque accompagnement suit une logique simple :
-    comprendre, prioriser, agir.
+    Chaque accompagnement suit une logique simple et éprouvée :
+    comprendre votre situation, prioriser les risques, puis agir de manière ciblée.
     Aucun sprint n’est lancé sans diagnostic préalable.
   </p>
 
   <div class="cards">
     <div class="card">
-      <h3>1️⃣ État des lieux</h3>
+      <h3>1️⃣ Diagnostic d’orientation</h3>
       <ul>
-        <li>Diagnostic structuré par domaine</li>
-        <li>Score clair sur 100</li>
-        <li>Identification des écarts critiques</li>
+        <li>Analyse rapide de votre situation</li>
+        <li>Identification des priorités réelles</li>
+        <li>Orientation vers le sprint le plus utile</li>
       </ul>
-      <div class="price">Diagnostic en ligne gratuit</div>
+      <div class="price">
+        Diagnostic exploratoire gratuit
+        <small>(sans livrable – 15 à 30 min)</small>
+      </div>
     </div>
 
     <div class="card">
       <h3>2️⃣ Sprint opérationnel</h3>
       <ul>
         <li>Objectif clair et borné</li>
-        <li>Livrables exploitables</li>
+        <li>Livrables concrets et réutilisables</li>
         <li>Délais courts (2 à 4 semaines)</li>
       </ul>
-      <div class="price">À partir de 1.250 € HT</div>
+      <div class="price">
+        Dès 1.250 € HT
+        <small>inclut analyse, livrables et restitution</small>
+      </div>
     </div>
 
     <div class="card">
       <h3>3️⃣ Suivi & pilotage</h3>
       <ul>
-        <li>Structuration dans le temps</li>
-        <li>Priorisation des prochaines actions</li>
-        <li>Crédibilité renforcée</li>
+        <li>Mise à jour continue des documents</li>
+        <li>Anticipation des évolutions réglementaires</li>
+        <li>Crédibilité renforcée dans la durée</li>
       </ul>
-      <div class="price">Sur devis</div>
+      <div class="price">
+        Abonnement ou accompagnement continu
+        <small>selon périmètre et besoins</small>
+      </div>
     </div>
   </div>
 </section>
@@ -232,8 +271,8 @@
         <h3>🌱 Sprint ESG</h3>
         <ul>
           <li>Structuration ESG pragmatique</li>
-          <li>Réponses aux demandes clients et banques</li>
-          <li>Préparation exigences 2026 / CSRD</li>
+          <li>Réponses aux demandes banques et clients</li>
+          <li>Préparation CSRD et exigences futures</li>
         </ul>
         <div class="price">Dès 1.500 € HT</div>
       </div>
@@ -244,7 +283,7 @@
         <h3>💼 Sprint AML / KYC</h3>
         <ul>
           <li>Revue du dispositif existant</li>
-          <li>Procédures et scoring adaptés</li>
+          <li>Procédures, scoring et preuves</li>
           <li>Préparation audits et contrôles</li>
         </ul>
         <div class="price">Dès 1.250 € HT</div>
@@ -255,9 +294,9 @@
       <div class="card">
         <h3>💻 Sprint Digitalisation</h3>
         <ul>
-          <li>Analyse de la maturité digitale</li>
+          <li>Analyse de maturité digitale</li>
           <li>Optimisation des outils internes</li>
-          <li>Automatisations ciblées et utiles</li>
+          <li>Automatisations ciblées</li>
         </ul>
         <div class="price">Dès 1.250 € HT</div>
       </div>
@@ -265,10 +304,10 @@
 
     <a href="sprint-credit-ratios-financiers.html" class="card-link">
       <div class="card">
-        <h3>📊 Sprint Crédit & ratios</h3>
+        <h3>📊 Sprint Crédit & ratios financiers</h3>
         <ul>
           <li>Lecture financière claire</li>
-          <li>Préparation dossiers bancaires</li>
+          <li>Dossiers bancaires renforcés</li>
           <li>Amélioration du profil de financement</li>
         </ul>
         <div class="price">Dès 1.250 € HT</div>
@@ -280,7 +319,7 @@
         <h3>🔐 Sprint Cybersécurité</h3>
         <ul>
           <li>Réduction du risque humain</li>
-          <li>Bonnes pratiques concrètes</li>
+          <li>Bonnes pratiques applicables</li>
           <li>Plan de réponse aux incidents</li>
         </ul>
         <div class="price">Dès 1.250 € HT</div>
@@ -288,6 +327,22 @@
     </a>
 
   </div>
+</section>
+
+<!-- =========================
+     FAQ
+========================= -->
+<section class="section">
+  <h2>Questions fréquentes</h2>
+
+  <p><strong>Ces sprints sont-ils adaptés à une petite structure ?</strong><br>
+  Oui. Ils sont conçus pour des PME et fiduciaires sans équipe conformité interne.</p>
+
+  <p><strong>Est-ce obligatoire réglementairement ?</strong><br>
+  Pas toujours, mais cela permet d’anticiper les exigences et d’éviter des corrections coûteuses.</p>
+
+  <p><strong>Travaillez-vous avec des fiduciaires ?</strong><br>
+  Oui, directement ou via leurs clients PME.</p>
 </section>
 
 </main>
@@ -298,9 +353,8 @@
 <section class="full-width-cta">
   <h2>Passez du diagnostic à l’action</h2>
   <p>
-    En 30 minutes gratuites, nous analysons vos résultats,
-    identifions vos priorités et définissons le sprint le plus utile
-    pour votre situation.
+    En 30 minutes gratuites, nous analysons votre situation,
+    identifions vos priorités et définissons le sprint le plus pertinent.
   </p>
   <a href="https://calendar.app.google/4E79ZUbDgHx2AMGe6"
      target="_blank"
